ingress/ingress-nginx/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb
  namespace: tea
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/whitelist-source-range: "${APP_IP_WHITELIST}"
spec:
  tls:
    - secretName: lb-tls
      hosts:
        - ${DNS_DOMAIN_NAME}
  rules:
    - host: ${DNS_DOMAIN_NAME}
      http:
        paths:
          - path: /
            backend:
              serviceName: chatapp-nginx
              servicePort: 80
          - path: /ws
            backend:
              serviceName: chatapp-gateway
              servicePort: 3000
